add simple logger w/log

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 simple-error = "0.2.3"
+simple_logger = "1.11.0"
+log = { version = "0.4.14", features = ["std"] }
 clap = "2.33.3"
 rust_decimal = { version = "1.10.2", features = ["serde-str"] }
 serde = { version = "1.0.123", features = ["derive"] }
