--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,9 @@ serde = { version = "1.0.123", features = ["derive"] }
 csv = "1.1.5"
 
 [[bin]]
+name = "main"
+path = "src/main.rs"
+
+[[bin]]
 name = "generate"
 path = "src/bin/generate.rs"
